hphp/hack/test/typecheck/global_const13.php
<?hh

class A {}

const A X = $x is A;
